# dj-cuda-samples

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
bouncing-balls/: CMakeLists.txt  defs.h  demo.cpp  kernels.cu  stats.h  visuals_gl.cpp
bouncing-balls/docker/: Dockerfile
k8s/: deployment-local.yaml  deployment-molecular_sim-local.yaml  deployment-molecular_sim.yaml  deployment.yaml
samples/: make_from_template.sh  makeall.sh
samples/bouncing_balls/: CMakeLists.txt  defs.h  demo.cpp  stats.h
samples/bouncing_balls/docker/: Dockerfile
samples/galaxy_explorer/: CMakeLists.txt  README.md
samples/galaxy_explorer/src/: main.cpp
samples/molecular_sim/: CMakeLists.txt  README.md
samples/molecular_sim/docker/: Dockerfile
samples/molecular_sim/src/: LennardJones.cu  LennardJones.h  VelocityVerlet.cu  VelocityVerlet.h  camera.cpp  main.cpp  md_simulation.cu  md_simulation.h  particles.cpp  particles.h  renderer.cpp  renderer.h  stats.h  view.cpp  view.h
samples/template_metal/: CMakeLists.txt  README.md
samples/template_metal/src/: main.cpp  main.mm
samples/template_minimal/: CMakeLists.txt  README.md
samples/template_minimal/src/: main.cpp
scripts/: psrunall.ps1  runall.sh  wrunall.bat
scripts/bench/: bench.bat  bench.sh
scripts/docker/: build.bat  dhbuild.bat  dhrun.bat  run.bat
src/: main.cpp
